--- a/AugmentEPF/app/src/main/res/values/strings.xml
+++ b/AugmentEPF/app/src/main/res/values/strings.xml
@@ -181,4 +181,5 @@
     <string name="admin_ground_floor">Ground Floor</string>
     <string name="admin_lower_floor">Lower Floor</string>
     <string name="admin_update">Update existing?</string>
+    <string name="admin_save_new">Save as new?</string>
 </resources>
